test: achieve 100% coverage for car, order, and payment controllers/services